fix z-index user

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11782,7 +11782,7 @@ body::-webkit-scrollbar-thumb:hover {
   padding: 20px;
   flex-grow: 1;
   background-color: white;
-  z-index: 9999;
+  z-index: 100;
 }
 
 .user_profile .profilo .nome {
