--- a/resources/sass/user.scss
+++ b/resources/sass/user.scss
@@ -40,7 +40,7 @@
         padding: 20px;
         flex-grow: 1;
         background-color: white;
-        z-index: 9999;
+        z-index: 100;
 
         .nome{
             height: 50px;
